--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,8 +7,12 @@
 :root {
   --ok_white1:hsl(0,0,100%,100%);
   --ok_gray1:hsl(240,24%,96%,100%);
+  --ok_gray2:hsl(240,16%,93%,100%);
+  --ok_sub1:hsl(232,63%,65%,100%);
   --button-outline: rgba(0,0,0, .10);
   --badge-outline: rgba(0,0,0, .05);
+  --black-n1:hsl(0,0%,0%,80%);
+  --primary_hov:hsl(246,29%,16%,100%);
 
   /* Automatic computation of border around primary / danger buttons */
   --opaque-button-border-intensity: -8; /* In terms of percentages */
@@ -17,7 +21,7 @@
   --elevate-1: rgba(0,0,0, .03);
   --elevate-2: rgba(0,0,0, .08);
 
-  --background: 0 0% 100%;
+  --background: hsl(240,24%,96%,100%);
 
   --foreground: 220 15% 12%;
 
