--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,10 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
+@font-face {
+  font-family: 'BagelFat';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_JAMO@1.0/BagelFatOne-Regular.woff2') format('woff2');
+  font-weight: normal;
+  font-display: swap;
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -242,9 +248,9 @@
 }
 
 @layer base {
-  * {
+  html {
     /* 모든 요소에 강제로 프리텐다드 적용! */
-    font-family: "Pretendard", "Noto Sans KR", sans-serif !important;
+    font-family: "Pretendard", "Noto Sans KR";
     /* 테두리 0.5픽셀단위까지 깔끔하게 보이게 하는 옵션 (안티앨리어싱) */
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
