--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,12 @@
   font-weight: normal;
   font-display: swap;
 }
+@font-face {
+  font-family: 'IncheonEducationHimchan';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/iceHimchan-Rg.woff2') format('woff2');
+  font-weight: normal;
+  font-display: swap;
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
