feat: 알림 확인 기능 추가

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,7 +28,7 @@
   --badge-outline: rgba(0,0,0, .05);
   --black-n1:hsl(0,0%,0%,80%);
   --primary_hov:hsl(246,29%,16%,100%);
-  --ok_txtgray0:#A99BAC;
+  --ok_txtgray0:#b1abb2;
   --ok_txtgray1:#685E6A;
   --ok_txtgray2:#1f1e1f;
   --ok_sand:#e8d5b5;
