style: overall color fixed

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -41,7 +41,7 @@
   --elevate-1: rgba(0,0,0, .03);
   --elevate-2: rgba(0,0,0, .08);
 
-  --background: #fbf8ff;
+  --background: #f9f5fb;
 
   --foreground: 220 15% 12%;
 
