feat: homepage new banner feat: mobile nav del, hamburger menu add

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -32,6 +32,7 @@
   --ok_txtgray1:#685E6A;
   --ok_txtgray2:#1f1e1f;
   --ok_sand:#e8d5b5;
+  --ok_sandhover:#ceb894;
   --ok_sandtxt:#997230;
 
   /* Automatic computation of border around primary / danger buttons */
