icon, hover color change

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -42,6 +42,7 @@
   --ok_yellow:#F6CC7E;
   --ok_yellowtrns:#dfa4352a;
   --ok_yellowtrnslt:#f0bb5950;
+  --ok_blacktrns:#302c3065;
 
 
   /* Automatic computation of border around primary / danger buttons */
